Add Transaction & Account in Backend
- Process forms from add_trans.html & add_acc.html
- API sites for transaction, account, agent

TODO:
- Autocreate all currencies
- Insert all Transactions

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,9 +3,8 @@
 {% block body %}
 <h1 class="display-1 ml-0"> Finnance </h1>
 <h2 class=""> Links </h2>
-<ul>
-    <a href="{{ url_for('main.add_transaction') }}">Add Transaction</a>
-    <a href="{{ url_for('main.add_account') }}">Add Account</a>
-
+<ul class="list-group list-group-flush">
+    <li class="list-group-item"><a href="{{ url_for('main.add_transaction') }}">Add Transaction</a></li>
+    <li class="list-group-item"><a href="{{ url_for('main.add_account') }}">Add Account</a></li>
 </ul>
 {% endblock %}
