--- a/app/templates/main/add_trans.html
+++ b/app/templates/main/add_trans.html
@@ -5,7 +5,7 @@
 <form action="{{ url_for('main.add_transaction') }}" method="post">
     <div class="form-group">
         <label for="account">Account</label>
-        <select class="form-control" list="accounts" id="account">
+        <select class="form-control" list="accounts" name="account">
             {% for account in accounts %}
             <option value="{{ account.id }}">{{ account.desc }}</option>
             {% endfor %}
@@ -13,21 +13,21 @@
     </div>
     <div class="form-group">
         <label for="amount">Amount</label>
-        <input class="form-control" type="number" id="amount" step="0.01">
+        <input class="form-control" type="number" name="amount" step="0.01">
     </div>
     <div class="form-group">
         <label for="date_issued">Date & Time of Transaction</label>
         <!-- Date Regex:
             dd                    mm mit 31 d       yyyy     dd                 mm mit 30 d     dd - 28         feb             y y schaltjahr                        hh
             ((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9] -->
-        <input class="form-control" type="text" id="date_isssued" maxlength=16 
+        <input class="form-control" type="text" name="date_issued" maxlength=16 
             pattern="((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9]"
             required>
         <small class="form-text text-muted">dd.mm.yyyy hh:mm</small>
     </div>
     <div class="form-group">
         <label for="agent">Agent</label>
-        <input class="form-control" type="text" list="agents" id="agent">
+        <input class="form-control" type="text" list="agents" name="agent">
         <datalist id="agents">
             {% for agent in agents %}
             <option value="{{ agent.desc }}"></option>
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group">
         <label for="comment">Comment</label>
-        <input class="form-control" type="text" maxlength=120 id="comment">
+        <input class="form-control" type="text" maxlength=120 name="comment">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
