All Accounts View, Account's Transactions View

--- a/app/templates/main/layout.html
+++ b/app/templates/main/layout.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lumen/bootstrap.min.css"></src>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css')}}"></src>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lumen/bootstrap.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css')}}"></link>
     <title>Finnance</title>
 </head>
 <body>
