--- a/app/templates/main/add_trans.html
+++ b/app/templates/main/add_trans.html
@@ -14,6 +14,15 @@
     <div class="form-group">
         <label for="amount">Amount</label>
         <input class="form-control" type="number" name="amount" step="0.01">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                {% for account in accounts %}
+                <option value="{{ account.id }}">{{ account.desc }}</option>
+                {% endfor %}
+                <div class="input-group-text">{{ Account.query.get() }}</div>
+            </div>
+            <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Username">
+        </div>
     </div>
     <div class="form-group">
         <label for="date_issued">Date & Time of Transaction</label>
