--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -6,5 +6,6 @@
 <ul class="list-group list-group-flush">
     <li class="list-group-item"><a href="{{ url_for('main.add_transaction') }}">Add Transaction</a></li>
     <li class="list-group-item"><a href="{{ url_for('main.add_account') }}">Add Account</a></li>
+    <li class="list-group-item"><a href="{{ url_for('main.list_accounts') }}">All Accounts</a></li>
 </ul>
 {% endblock %}
