--- a/app/templates/main/account.html
+++ b/app/templates/main/account.html
@@ -13,9 +13,12 @@
 
 <h2>{{ account.currency() }} {{ account.saldo_formatted() }}</h2>
 
-<form action="{{ url_for('main.add_transaction') }}">
-    <button class="btn btn-primary btn-lg mb-2">New Transaction</button>
-</form>
+<button type="button" class="btn btn-primary btn-lg mb-2" data-toggle="modal" data-target="#addTrans{{ account.id }}">
+    New Transaction
+</button>
+<!-- Modal -->
+
+{% include "main/add_trans.html" %}
 
 <table class="table table-hover clickable-table">
     <caption><a href="{{ url_for('main.account_transactions', account_id=account.id) }}">More...</a></caption>
