--- a/app/templates/main/add_trans.html
+++ b/app/templates/main/add_trans.html
@@ -1,44 +1,52 @@
-{% extends "main/layout.html" %}
-
-{% block body %}
-
-<form action="{{ url_for('main.add_transaction') }}" method="post">
-    <div class="form-group">
-        <label for="account">Account</label>
-        <select class="form-control" list="accounts" name="account">
-            {% for account in accounts %}
-            <option value="{{ account.id }}">{{ account.desc }}</option>
-            {% endfor %}
-        </select>
+<div class="modal fade" data-backdrop="static" id="addTrans{{ account.id }}" tabindex="-1" role="dialog" aria-labelledby="addTransLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addTransLabel">New Transaction</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="{{ url_for('main.account', account_id=account.id) }}" id="transactionForm" method="post">
+                    <input type="number" value="{{ account.id }}" name="account_id" style="display: none;">
+                    <div class="form-group">
+                        <label for="account">Account</label>
+                        <input class="form-control" type="text" name="account" placeholder="{{ account.desc }}" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="amount">Amount</label>
+                        <input class="form-control" type="number" name="amount" step="0.01">
+                    </div>
+                    <div class="form-group">
+                        <label for="date_issued">Date & Time of Transaction</label>
+                        <!-- Date Regex:
+                            dd                    mm mit 31 d       yyyy     dd                 mm mit 30 d     dd - 28         feb             y y schaltjahr                        hh
+                            ((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9] -->
+                        <input class="form-control" type="text" name="date_issued" maxlength=16 
+                            pattern="((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9]"
+                            required>
+                        <small class="form-text text-muted">dd.mm.yyyy hh:mm</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="agent">Agent</label>
+                        <input class="form-control" type="text" list="agents" name="agent">
+                        <datalist id="agents">
+                            {% for agent in agents %}
+                            <option value="{{ agent.desc }}"></option>
+                            {% endfor %}
+                        </datalist>
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment</label>
+                        <input class="form-control" type="text" maxlength=120 name="comment">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" form="transactionForm" class="btn btn-primary">Add new Transaction</button>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="amount">Amount</label>
-        <input class="form-control" type="number" name="amount" step="0.01">
-    </div>
-    <div class="form-group">
-        <label for="date_issued">Date & Time of Transaction</label>
-        <!-- Date Regex:
-            dd                    mm mit 31 d       yyyy     dd                 mm mit 30 d     dd - 28         feb             y y schaltjahr                        hh
-            ((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9] -->
-        <input class="form-control" type="text" name="date_issued" maxlength=16 
-            pattern="((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9]"
-            required>
-        <small class="form-text text-muted">dd.mm.yyyy hh:mm</small>
-    </div>
-    <div class="form-group">
-        <label for="agent">Agent</label>
-        <input class="form-control" type="text" list="agents" name="agent">
-        <datalist id="agents">
-            {% for agent in agents %}
-            <option value="{{ agent.desc }}"></option>
-            {% endfor %}
-        </datalist>
-    </div>
-    <div class="form-group">
-        <label for="comment">Comment</label>
-        <input class="form-control" type="text" maxlength=120 name="comment">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
-{% endblock %}
+</div>
