--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -5,7 +5,7 @@
 <h2 class="display-4">Accounts:</h2>
 <table class="table table-hover clickable-table" id="all_accounts">
     <tbody>
-        {% for i, account in accounts %}
+        {% for account in accounts %}
         <tr>
             <th onclick="document.location = `{{ url_for('main.account', account_id=account.id) }}`;" 
                 scope="row">{{ account.desc }}</th>
@@ -13,9 +13,9 @@
             <td onclick="document.location = `{{ url_for('main.account', account_id=account.id) }}`;" 
                 style="text-align: right;">{{ account.currency() }} {{ account.saldo_formatted() }}</td>
             <td style="width: 44px; padding: 0px;">
-                <form action="{{ url_for('main.add_transaction') }}">
-                    <button style="height: 100%; width: 100%;" title="Add Transaction to Account" class="btn btn-success btn-lg">+</button>
-                </form>
+                <button type="button" class="btn btn-success btn-lg mb-2" data-toggle="modal" data-target="#addTrans{{ account.id }}" style="height: 100%; width: 100%;">+</button>
+                <!-- Modal -->
+                {% include "main/add_trans.html" %}
             </td>
         </tr>
         {% endfor %}
