--- a/app/templates/main/index.jinja
+++ b/app/templates/main/index.jinja
@@ -1,5 +1,5 @@
-{% extends "main/layout.html" %}
-
+{% extends "main/layout.jinja" %}
+{% import "main/macros.jinja" as macros %}
 {% block body %}
 <h1 class="display-1">Finnance</h1>
 <h2 class="display-4">Accounts:</h2>
@@ -13,9 +13,10 @@
             <td onclick="document.location = `{{ url_for('main.account', account_id=account.id) }}`;" 
                 style="text-align: right;">{{ account.currency() }} {{ account.saldo_formatted() }}</td>
             <td style="width: 44px; padding: 0px;">
-                <button type="button" class="btn btn-success btn-lg mb-2" data-toggle="modal" data-target="#addTrans{{ account.id }}" style="height: 100%; width: 100%;">+</button>
+                <button type="button" class="btn btn-success btn-lg mb-2" data-toggle="modal" data-target="#addTransModal{{ account.id }}" style="height: 100%; width: 100%;">+</button>
                 <!-- Modal -->
-                {% include "main/add_trans.html" %}
+                <!-- defined in included macros.jinja -->
+                {{ macros.add_trans_modal(account, url_for('main.index'), agents) }}
             </td>
         </tr>
         {% endfor %}
