--- a/app/templates/main/macros.jinja
+++ b/app/templates/main/macros.jinja
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{{ post_url }}" id="transactionForm" method="post">
+                <form action="{{ post_url }}" id="transactionForm{{ account.id }}" method="post">
                     <input type="number" value="{{ account.id }}" name="account_id" style="display: none;">
                     <div class="form-group">
                         <label for="account">Account</label>
@@ -46,7 +46,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="submit" form="transactionForm" class="btn btn-primary">Add new Transaction</button>
+                <button type="submit" form="transactionForm{{ account.id }}" class="btn btn-primary">Add new Transaction</button>
             </div>
         </div>
     </div>
