DataTable for Account Transactions
- Made Transaction Table a DataTable
- Some Macros in frontend for tables

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -2,6 +2,23 @@ table.clickable-table > tbody > tr:hover {
     cursor: pointer;
 }
 
+.h1-link:hover {
+    cursor: pointer;
+}
+
 #all_accounts {
     font-size: 150%;
+}
+
+table.dataTable thead .sorting:after,
+table.dataTable thead .sorting:before,
+table.dataTable thead .sorting_asc:after,
+table.dataTable thead .sorting_asc:before,
+table.dataTable thead .sorting_asc_disabled:after,
+table.dataTable thead .sorting_asc_disabled:before,
+table.dataTable thead .sorting_desc:after,
+table.dataTable thead .sorting_desc:before,
+table.dataTable thead .sorting_desc_disabled:after,
+table.dataTable thead .sorting_desc_disabled:before {
+bottom: .5em;
 }
