--- a/app/templates/main/account.j2
+++ b/app/templates/main/account.j2
@@ -1,5 +1,6 @@
-{% extends "main/layout.jinja" %}
-{% import "main/macros.jinja" as macros %}
+{% extends "main/layout.j2" %}
+{% import "main/trans_modals.j2" as trans_modals %}
+{% import "main/macros.j2" as macros %}
 
 {% block body %}
 
@@ -12,20 +13,20 @@
     </div>
 </div>
 
-<h2>{{ account.currency() }} {{ account.saldo_formatted() }}</h2>
+<h2>{{ account.currency.code }} {{ account.saldo_formatted() }}</h2>
 
 <button type="button" class="btn btn-primary btn-lg mb-2" data-toggle="modal" data-target="#addTransModal{{ account.id }}">
     New Transaction
 </button>
 <!-- Modal -->
-<!-- defined in included macros.jinja -->
-{{ macros.add_trans_modal(account, url_for('main.account', account_id=account.id), agents) }}
+<!-- defined in included trans_modals.j2 -->
+{{ trans_modals.post(account, url_for('main.account', account_id=account.id), agents, categories) }}
 
 <table class="table table-hover clickable-table">
     <caption><a href="{{ url_for('main.account_transactions', account_id=account.id) }}">More...</a></caption>
     {{ macros.trans_table_head() }}
     <tbody>
-        {{ macros.trans_table_forloop(last_5, account, formatted) }}
+        {{ macros.trans_table_forloop(last_5, url_for("main.account", account_id=account.id), account, formatted, agents, categories) }}
     </tbody>
 </table>
 
