--- a/app/templates/main/home.j2
+++ b/app/templates/main/home.j2
@@ -1,5 +1,6 @@
-{% extends "main/layout.jinja" %}
-{% import "main/macros.jinja" as macros %}
+{% extends "main/layout.j2" %}
+{% import "main/trans_modals.j2" as trans_modals %}
+
 {% block body %}
 <h1 class="display-1">Finnance</h1>
 <h2 class="display-4">Accounts:</h2>
@@ -11,12 +12,12 @@
                 scope="row">{{ account.desc }}</th>
             <!-- <td>{{ account.date_created.strftime('%d.%m.%Y') }}</td> -->
             <td onclick="document.location = `{{ url_for('main.account', account_id=account.id) }}`;" 
-                style="text-align: right;">{{ account.currency() }} {{ account.saldo_formatted() }}</td>
+                style="text-align: right;">{{ account.currency.code }} {{ account.saldo_formatted() }}</td>
             <td style="width: 44px; padding: 0px;">
                 <button type="button" class="btn btn-success btn-lg mb-2" data-toggle="modal" data-target="#addTransModal{{ account.id }}" style="height: 100%; width: 100%;">+</button>
                 <!-- Modal -->
-                <!-- defined in included macros.jinja -->
-                {{ macros.add_trans_modal(account, url_for('main.index'), agents) }}
+                <!-- defined in included trans_modals.j2 -->
+                {{ trans_modals.post(account, url_for('main.index'), agents, categories) }}
             </td>
         </tr>
         {% endfor %}
