--- a/app/templates/main/trans_modals.j2
+++ b/app/templates/main/trans_modals.j2
@@ -106,9 +106,9 @@
                     </div>
                     <div class="form-group">
                         <label for="category">Category</label>
-                        <select class="form-control" name="category" value="{{ tr.category.id }}">
+                        <select class="form-control" name="category">
                             {% for cat in categories %}
-                            <option value="{{ cat.id }}">{{ cat.desc }}</option>
+                            <option value="{{ cat.id }}" {% if cat.id == tr.category.id %} selected {% endif %}>{{ cat.desc }}</option>
                             {% endfor %}
                         </select>
                     </div>
