Transfer Modal, update_category() (js)
- drag and drop Transfer Buttons, followed by Modal
- update_category function in helpers.js
  for amount inputs

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -22,3 +22,7 @@ table.dataTable thead .sorting_desc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before {
 bottom: .5em;
 }
+
+.transfer {
+    color: #fff;
+}
